@@ -5,8 +5,8 @@ Version: 0.3-3
 Date: 2015-10-22
 Author: Peter Solymos, Monica Moreno, Subhash R Lele
 Maintainer: Peter Solymos <solymos@ualberta.ca>
-Depends: R (>= 2.13.0), Formula, stats4
-Suggests: dclone, dcmle, pbapply
+Depends: R (>= 2.13.0), Formula, stats4, pbapply
+Suggests: dclone, dcmle
 Description: Models for analyzing site occupancy and count data models
   with detection error. The package development was supported by the
   Alberta Biodiversity Monitoring Institute (ABMI)
